[package]
name = "futures-locks"
edition = "2018"
version = "0.5.1-pre"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/asomers/futures-locks"
description = """
Futures-aware lock primitives
"""
categories = ["asynchronous"]
documentation = "https://docs.rs/futures-locks"
exclude = [
	".gitignore",
	".travis.yml",
	"release.toml"
]
autotests = false

[package.metadata.docs.rs]
features = ["tokio", "nightly-docs"]

[features]
# Enable methods that require a Tokio runtime.
default = ["tokio"]
# For building documentation only; no functional change to the library.
nightly-docs = []

[dependencies]
futures = "0.3.1"
tokio = { version = "0.2.7", features = ["rt-core", "rt-util"], optional = true }

[dev-dependencies]
# features, dependencies, dev-dependencies, and build-dependencies all share
# the same namespace. To avoid a clash with the `tokio` feature, rename the
# `tokio` dev-dependency. See https://github.com/rust-lang/cargo/issues/4866.
tokio = { version = "0.2.7", features = ["sync", "macros", "rt-threaded"] }
tokio-test = { version = "0.2.0" }

[[test]]
name = "functional"
path = "tests/test.rs"
