[package]
name = "futures-locks"
edition = "2018"
version = "0.6.1-pre"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/asomers/futures-locks"
description = """
Futures-aware lock primitives
"""
categories = ["asynchronous"]
documentation = "https://docs.rs/futures-locks"
autotests = false
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
features = ["tokio", "nightly-docs"]

[features]
# Enable methods that require a Tokio runtime.
default = ["tokio"]
# For building documentation only; no functional change to the library.
nightly-docs = []

[dependencies]
futures = "0.3.1"
tokio = { version = "1.0", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
tokio-test = { version = "0.2.0" }

[[test]]
name = "functional"
path = "tests/test.rs"
